--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "mongodb": "docker run --rm --name local-mongo -p 27017:27017 -d mongo",
-    "start": "node ./src/index.js",
-    "dev": "nodemon 'src/server.ts' --exec 'ts-node' src/server.ts -e ts,graphql"
+    "start": "node ./dist/server.js",
+    "dev": "nodemon 'src/server.ts' --exec 'ts-node' src/server.ts -e ts,graphql",
+    "build": "tsc --build && npm run copy-resource",
+    "clean": "rm -rf dist/  && tsc --build --clean",
+    "copy-resource": "copyfiles -u 1 src/**/*.graphql dist/"
   },
   "author": "",
   "license": "ISC",
@@ -34,6 +37,7 @@
     "@types/graphql-depth-limit": "^1.1.2",
     "@types/mongoose": "^5.7.37",
     "@types/node": "^14.14.6",
+    "copyfiles": "^2.4.1",
     "graphql-depth-limit": "^1.1.0",
     "graphql-import": "^1.0.2",
     "graphql-import-node": "0.0.4",
