--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@graphql-tools/load-files": "^6.2.5",
+    "@graphql-tools/merge": "^6.2.7",
     "@types/jsonwebtoken": "^8.5.0",
     "apollo-server-express": "^2.19.0",
     "compression": "^1.7.4",
