--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "nodemon 'src/server.ts' --exec 'ts-node' src/server.ts -e ts,graphql --unhandled-rejections=strict",
     "build": "tsc --build && npm run copy-resource",
     "clean": "rm -rf dist/  && tsc --build --clean",
-    "copy-resource": "copyfiles -u 1 src/**/*.graphql dist/"
+    "copy-resource": "copyfiles -u 1 src/**/*.gql dist/"
   },
   "author": "",
   "license": "ISC",
