--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --detectOpenHandles --forceExit",
     "mongodb": "docker run --rm --name local-mongo -p 27017:27017 -d mongo",
     "start": "node ./dist/server.js",
     "dev": "nodemon 'src/server.ts' --exec 'ts-node' src/server.ts -e ts,graphql --unhandled-rejections=strict",
@@ -35,18 +35,43 @@
     "subscriptions-transport-ws": "^0.9.18"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/preset-env": "^7.13.5",
+    "@babel/preset-typescript": "^7.13.0",
     "@types/compression": "^1.7.0",
     "@types/express": "^4.17.8",
     "@types/graphql": "^14.5.0",
     "@types/graphql-depth-limit": "^1.1.2",
+    "@types/jest": "^26.0.20",
     "@types/mongoose": "^5.7.37",
     "@types/node": "^14.14.6",
+    "babel-polyfill": "^6.26.0",
     "copyfiles": "^2.4.1",
     "graphql-depth-limit": "^1.1.0",
     "graphql-import": "^1.0.2",
     "graphql-import-node": "0.0.4",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.6",
+    "supertest": "^6.1.3",
+    "ts-jest": "^26.5.2",
     "ts-node": "^9.0.0",
-    "typescript": "^4.1.3"
+    "typescript": "^4.2.2"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.ts$": "ts-jest"
+    },
+    "testRegex": "\\.test\\.ts$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "json"
+    ],
+    "globals": {
+      "ts-jest": {
+        "diagnostics": true
+      }
+    }
   }
 }
