--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "mongoose": "^5.10.13",
     "nanoid": "^3.1.20",
     "restify": "^8.5.1",
-    "subscriptions-transport-ws": "^0.9.18"
+    "subscriptions-transport-ws": "^0.9.18",
+    "tslog": "^3.1.2"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.13.0",
